feat: implement NodeAdjacencyStorage for graph layer
- Add NodeAdjacencyStorage to manage graph adjacency lists in FDB
- Implement bidirectional edge management with degree bounds
- Add DiskANN-style robust pruning for diverse neighbor selection
- Support batch operations for efficient multi-node updates
- Include entry list and graph metadata storage
- All methods expose Transaction parameter for caller control
- Return CompletableFutures for non-blocking async operations
- Add comprehensive test coverage with async patterns

This is the core storage component for the graph layer, enabling
efficient nearest neighbor graph construction and traversal.